# HomeWork

./: Jenkinsfile  oop.rar
OS/OS/tolset/harib00f/: haribote.img  haribote.lst  haribote.nas  haribote.sys  ipl.lst  ipl.nas
OS/OS/tolset/harib01a/: bootpack.bim  bootpack.c  bootpack.gas  bootpack.hrb  bootpack.lst  bootpack.map  bootpack.nas  haribote.img  haribote.sys
OS/OS/tolset/harib01f/: Makefile  bootpack.bim  bootpack.c  bootpack.gas  bootpack.hrb  bootpack.lst  bootpack.map  bootpack.nas  haribote.img  haribote.sys
OS/OS/tolset/harib01h/: bootpack.bim  bootpack.c  bootpack.gas  bootpack.hrb  bootpack.lst  bootpack.map  bootpack.nas  haribote.img  haribote.sys
OS/OS/tolset/harib02e/: bootpack.bim  bootpack.c  bootpack.gas  bootpack.hrb  bootpack.lst  bootpack.map  bootpack.nas  haribote.img  haribote.sys
OS/OS/tolset/harib02h/: Makefile  bootpack.bim  bootpack.c  bootpack.gas  bootpack.hrb  (+5 more)
OS/OS/tolset/harib24f/: CMakeLists.txt  Makefile  bootpack.bim  bootpack.c  bootpack.h  bootpack.hrb  bootpack.lst  bootpack.map  haribote.img  haribote.sys  star1.map  stars.map  stars2.map  sync_utils.c  sync_utils.lst  winhelo.map  winhelo2.map  winhelo3.map
OS/note/: Day0.md  Day1.md  Day10.md  Day11.md  Day12.md  Day13.md  Day14.md  Day15.md  Day16.md  Day17.md  Day18.md  Day19.md  Day2.md  Day20.md  Day21.md  Day22.md  Day23.md  Day24.md  Day25.md  Day26.md  Day27.md  Day28.md  Day29.md  Day3.md  Day4.md  Day5.md  Day6.md  Day7.md  Day8.md  Day9.md
algo/divide and conquer/1/: 排序算法的比较.xlsx
algo/divide and conquer/knn/: K-NN算法与改进.pptx  Untitled.ipynb  a  f  knnread.cpp
algo/divide and conquer/sorts/: Makefile  gen.py  gen.sh  main.cpp  qsort.out  table.html  test.sh  评价报告.md
algo/divide and conquer/tournament/: a.out  report.md  tournament.cpp
algo/divide andconquer/fft/: fft.cpp  ntt.cpp
algo/divide andconquer/knn/: a.out  b  c  d  e  knn.cpp  knndnc.cpp  test.cpp
algo/dynamic programming/little shop of flowers/: Makefile  case1.txt  case2.txt  case3.txt  case4.txt  dnc  dnc.cpp  dp  dp.cpp  gen.py  gen.sh  input.cpp  input.h  report.md  test.sh
algo/exp2/: Session.vim  a.out  a.txt  isort.out  main.cpp  msort.out  qsort.out  resu.txt  runtime.txt  std.cpp  std.out  test.sh  算法实验.xlsx  评价报告.md
algo/exp2/data/: d100.ans  d100.txt  d1000.ans  d1000.txt  d100000.ans  d100000.txt  i100.ans  i100.txt  i1000.ans  r100.txt  r10000.txt
algo/greedy/: 褚逸豪-2017211123-背包客.pptx
computer networks/Lab1-2018(Win+Linux)/: ~$实验报告.docx  ~$测试记录表-参考数据.docx  实验报告.docx  实验报告封面打印.doc  实验报告封面褚逸豪.doc  性能测试记录表.docx  讲义ch3-Lab.pptx
computer networks/Lab1-2018(Win+Linux)/Lab1- clion/: CMakeLists.txt
computer networks/Lab1-2018(Win+Linux)/Lab1-Windows- devcpp/: ComputerNetwork.dev  ComputerNetwork.layout  Makefile.win
computer networks/Lab1-2018(Win+Linux)/Lab1-Windows-VS2013/: datalink.sln  datalink.vcxproj  lprintf.c  lprintf.h
computer networks/Lab1-2018(Win+Linux)/Lab1-Windows-VS2017/: datalink.c  datalink.vcxproj  datalink.vcxproj.filters  protocol.c  protocol.h
computer networks/Lab1-2018(Win+Linux)/Lab1-Windows-devcpp/: ComputerNetwork.layout  Makefile.win  protocol.c
computer networks/Lab1-2018(Win+Linux)/Lab1-linux/: CMakeLists.txt  Makefile  datalink  datalink.c  protocol.c
computer networks/Lab1-2018(Win+Linux)/Lab1-linux - bak - 副本/: datalink
computer networks/Lab1-2018(Win+Linux)/Lab1-linux - selective/: Makefile  datalink  datalink.c
computer networks/Lab1-2018(Win+Linux)/Lab1-linux - selective - wangluo/: CMakeLists.txt  datalink  datalink.c
computer organization/: CPU管脚分配表.csv  cpu.vhdl  test program.txt  输出信号表.xlsx
computer organization/hardwired/: cpu.vhdl  测试指令.txt  输出信号表.xlsx
computer organization/pipe-lined hardwired/: cpu.vhdl  测试指令.txt  输出信号表.xlsx
oop/big/word_elemination/word_elemination/: CMakeLists.txt  auth.cpp  auth.h  challenge.cpp  challenge.h  common.cpp  common.h  initialform.cpp  initialform.h  initialform.ui  localconnect.cpp  localconnect.h  main.cpp  serverconnect.cpp  serverconnect.h  theme.qss  ui_initialform.h  ui_userhomeform.h  user.cpp  user.h  userhomeform.cpp  userhomeform.h  userhomeform.ui  word_elemination.pro
oop/big/word_elemination/word_elemination/QtAwesome/: CMakeLists.txt
oop/big/word_elemination/word_elemination/forms/: initialform.cpp  listusersform.cpp  playform.cpp  uicall.cmd  userhomeform.cpp  userhomeform.h  userhomeform.ui
oop/big/word_elemination/word_elemination_2/: CMakeLists.txt  auth.cpp  challenge.cpp  challenge.h  common.cpp  common.h  localconnect.cpp  localconnect.h  main.cpp  serverconnect.cpp  theme.qss
oop/big/word_elemination/word_elemination_2/forms/: initialform.cpp  initialform.h  listusersform.h  playform.cpp  playform.h  uicall.cmd  userhomeform.cpp
oop/big/word_elemination/word_elemination_3/: CMakeLists.txt
oop/big/word_elemination/word_elemination_3/client/: clientcommon.cpp  clientcommon.h  localconnect.cpp  localconnect.h  main.cpp  theme.qss
oop/big/word_elemination/word_elemination_3/client/QtAwesome/: CMakeLists.txt
oop/big/word_elemination/word_elemination_3/client/forms/: addwordform.cpp  addwordform.h  addwordform.ui  initialform.cpp  initialform.ui  listusersform.cpp  playform.cpp  playform.h  uicall.cmd  userhomeform.cpp  userhomeform.h  userhomeform.ui
oop/big/word_elemination/word_elemination_3/server/: ConnManager.cpp  ConnManager.h  auth.cpp  auth.h  server.cpp  server.h  servercommon.cpp  servercommon.h  serverconnect.cpp  serverconnect.h
oop/big/word_elemination/word_elemination_3/tcptest/: client.cpp
oop/big/word_elemination/word_elemination_3/utils/: challenge.cpp  challenge.h  user.h
oop/exp1/: Makefile  Session.vim  main.cpp  main.out  matrix.cpp  matrix.h
oop/exp2/1/: Makefile  Session.vim  geometry.cpp  geometry.h  main.cpp  main.out
oop/exp2/2/: Makefile  Session.vim  main.cpp  main.out  matrix.cpp  matrix.h
oop/exp3/: Makefile  Session.vim  main.cpp  main.out  shape.cpp  shape.h
oop/exp4/: Makefile  Session.vim  main.cpp  main.out
oop/exp5/2/: Makefile  Session.vim  geometry.cpp  geometry.h  main.cpp  main.out
(+671 files in other folders)
